syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

//сервіс gRPC з чотирма методами RPC
service DiscountProtoService {

	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);

	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);	  
}

//запит
message GetDiscountRequest {
  string title = 1;
}

//відповідь
message CouponModel {
	int32 id = 1;
	string title = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest {
  CouponModel coupon = 1;
}

message UpdateDiscountRequest {
  CouponModel coupon = 1;
}

message DeleteDiscountRequest {
  string title = 1;
}

//відповідь
message DeleteDiscountResponse {
  bool success = 1;
}